# api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint-internal.sh  entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: pytest.yml
tests/: conftest.py
tests/launcher/: data.py  test_auth.py  test_options_sync.py  test_profiles.py  test_user.py  utils.py
wlands/: config.py  exceptions.py  main.py  migrate.py
wlands/admin/: __init__.py  app.py  dependencies.py  forms.py  jinja_filters.py
wlands/admin/templates/: announcement.jinja2  announcements.jinja2  authlib.jinja2  cape.jinja2  capes.jinja2  layout.jinja2  login.jinja2  macros.jinja2  profile.jinja2  profiles.jinja2  update.jinja2  updates.jinja2  user.jinja2  users.jinja2
wlands/common/: qtifw_update_xml.py
wlands/internal/: main.py  schemas.py
wlands/launcher/: README.md  __init__.py  app.py  dependencies.py  manifest_models.py  qtifw_update_xml.py  request_models.py  response_models.py  schemas.py  utils.py
wlands/launcher/v1/: app.py  dependencies.py  request_models.py  response_models.py  utils.py
wlands/minecraft/: README.md  app.py  dependencies.py  schemas.py
wlands/models/: __init__.py  _utils.py  allowed_mod.py  authlib_agent.py  cape.py  failed_login_attempt.py  game_profile.py  game_user_session.py  join_request.py  launcher_announcement.py  launcher_update.py  options_sync.py  player_keypair.py  player_report.py  profile_file.py  profile_server_address.py  reported_message.py  tg_user.py  update.py  user.py  user_session.py  usercape.py
