[tool.poetry]
name = "wlands-backend"
version = "0.1.0"
description = ""
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
tortoise-orm = {extras = ["asyncmy", "accel"], version = "^0.25.3"}
pycryptodome = "^3.23.0"
bcrypt = "^5.0.0"
python-magic = "^0.4.27"
pillow = "^12.1.0"
s3lite = "^0.1.11"
pydantic = {extras = ["email"], version = "2.12.5"}
python-multipart = "^0.0.21"
pydantic-xml = "^2.18.0"
jinja2 = "^3.1.6"
aerich = "^0.9.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-append --cov=wlands"

[tool.coverage.run]
data_file = "coverage.coverage"
