[project]
name = "wlands-backend"
version = "0.1.0"
description = ""
authors = [{ name = "RuslanUC", email = "dev_ruslan_uc@protonmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.136.0,<0.137",
    "uvicorn>=0.48.0,<0.49",
    "tortoise-orm[asyncmy, accel]>=0.25.3,<0.26",
    "pycryptodome>=3.23.0,<4",
    "bcrypt>=5.0.0,<6",
    "python-magic>=0.4.27,<0.5",
    "pillow>=12.2.0,<13",
    "s3lite>=0.1.12,<0.2",
    "pydantic[email]>=2.13.0,<2.14",
    "python-multipart>=0.0.29,<0.0.30",
    "pydantic-xml>=2.21.0,<3",
    "jinja2>=3.1.6,<4",
    "aerich>=0.9.2,<0.10",
]

[dependency-groups]
test = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-asyncio>=1.3.0,<2",
    "asgi-lifespan>=2.1.0,<3",
    "fake-s3>=1.0.2,<2",
]

[tool.uv]
package = false

[tool.coverage.run]
data_file = "coverage.coverage"

[tool.pytest]
python_classes = []
filterwarnings = ["error"]
strict_config = true
strict_markers = true
strict_parametrization_ids = true
strict_xfail = false
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
